Part 2: added a customers controller, actions/views, routes and CSS styling.

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,4 +1,2 @@
 <h1>All Customers</h1>
-<% @customers.each do |customer| %>
-  <%= render partial: 'customer', object: customer %>
-<% end %>
+<%= render partial: 'customer', object: @customers %>
