--- a/app/views/customers/missing_email.html.erb
+++ b/app/views/customers/missing_email.html.erb
@@ -1,2 +1,2 @@
 <h1>All Customers (Missing E-mail Address)</h1>
-<%= render partial: 'customer', collection: @customer %>
+<%= render partial: 'customer', object: @customers %>
