--- a/app/views/customers/alphabetized.html.erb
+++ b/app/views/customers/alphabetized.html.erb
@@ -1,2 +1,2 @@
 <h1>All Customers (Alphabetized by Name)</h1>
-<%= render partial: 'customer', collection: @customer %>
+<%= render partial: 'customer', object: @customers %>
